--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "php": "^8.2",
         "inertiajs/inertia-laravel": "^2.0",
         "laravel/framework": "^11.31",
+        "laravel/socialite": "^5.17",
         "laravel/tinker": "^2.9",
         "openai-php/client": "^0.10.3",
         "predis/predis": "^2.3"
